--- a/firebase-config.js.template
+++ b/firebase-config.js.template
@@ -22,7 +22,7 @@ console.log('✅ Database:', firebaseConfig.databaseURL);
 console.log('✅ Auth Domain:', firebaseConfig.authDomain);
 console.groupEnd();
 
-// Проверка конфигурации (упрощенная)
+// Проверка конфигурации
 if (typeof window !== 'undefined') {
   window.firebaseConfig = firebaseConfig;
   console.log('✅ Конфигурация сохранена в window.firebaseConfig');
