--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           
-      - name: 📦 Генерация конфига с помощью Node
+      - name: 📦 Генерация конфига
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
@@ -92,15 +92,16 @@ jobs:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
-          echo "🚀 Генерация firebase-config.js из шаблона..."
+          echo "🚀 Генерация firebase-config.js..."
           
           # Проверяем существование скрипта
-          if [ ! -f "scripts/generate-config.js" ]; then
-            echo "📝 Создаем простой скрипт генерации..."
-            cat > generate-config-simple.js << 'EOF'
-            const fs = require('fs');
-            
-            const template = `// ====================================================
+          if [ -f "scripts/generate-config.js" ]; then
+            echo "📝 Используем существующий скрипт..."
+            node scripts/generate-config.js
+          else
+            echo "📝 Создаем конфиг напрямую..."
+            cat > firebase-config.js << 'EOF'
+            // ====================================================
             // 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS
             // ⚠️ Этот файл создается автоматически GitHub Actions
             // ====================================================
@@ -108,14 +109,14 @@ jobs:
             console.log('🚀 Загрузка Firebase конфигурации...');
             
             const firebaseConfig = {
-              apiKey: "${process.env.FIREBASE_API_KEY}",
-              authDomain: "${process.env.FIREBASE_AUTH_DOMAIN}",
-              databaseURL: "${process.env.FIREBASE_DATABASE_URL}",
-              projectId: "${process.env.FIREBASE_PROJECT_ID}",
-              storageBucket: "${process.env.FIREBASE_STORAGE_BUCKET}",
-              messagingSenderId: "${process.env.FIREBASE_MESSAGING_SENDER_ID}",
-              appId: "${process.env.FIREBASE_APP_ID}",
-              measurementId: "${process.env.FIREBASE_MEASUREMENT_ID}"
+              apiKey: "$FIREBASE_API_KEY",
+              authDomain: "$FIREBASE_AUTH_DOMAIN",
+              databaseURL: "$FIREBASE_DATABASE_URL",
+              projectId: "$FIREBASE_PROJECT_ID",
+              storageBucket: "$FIREBASE_STORAGE_BUCKET",
+              messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
+              appId: "$FIREBASE_APP_ID",
+              measurementId: "$FIREBASE_MEASUREMENT_ID"
             };
             
             console.group('📊 Firebase Configuration:');
@@ -130,21 +131,15 @@ jobs:
               console.log('✅ Конфигурация сохранена в window.firebaseConfig');
             }
             
-            console.log('✅ FIREBASE CONFIG READY\\n');`;
-            
-            fs.writeFileSync('firebase-config.js', template);
-            console.log('✅ Конфиг создан');
+            console.log('✅ FIREBASE CONFIG READY\n');
             EOF
-            
-            node generate-config-simple.js
-          else
-            node scripts/generate-config.js
           fi
           
           echo "🔍 Проверяем результат..."
           if [ -f "firebase-config.js" ]; then
-            echo "✅ Файл создан:"
-            head -20 firebase-config.js
+            echo "✅ Файл создан успешно"
+            echo "📄 Содержимое (первые 10 строк):"
+            head -10 firebase-config.js
           else
             echo "❌ Файл не создан!"
             exit 1
@@ -167,7 +162,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           
-      - name: 🔄 Восстановление конфига
+      - name: 🔄 Восстановление конфига (дублируем для надежности)
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
@@ -178,33 +173,61 @@ jobs:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
-          echo "🔄 Восстановление firebase-config.js..."
+          echo "🔄 Создаем firebase-config.js..."
           
-          # Читаем шаблон
-          TEMPLATE=$(cat firebase-config.js.template)
+          # Создаем конфиг напрямую
+          cat > firebase-config.js << 'EOF'
+          // ====================================================
+          // 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS
+          // ⚠️ Этот файл создается автоматически GitHub Actions
+          // ====================================================
           
-          # Заменяем все переменные
-          CONFIG="${TEMPLATE//\{\{FIREBASE_API_KEY\}\}/$FIREBASE_API_KEY}"
-          CONFIG="${CONFIG//\{\{FIREBASE_AUTH_DOMAIN\}\}/$FIREBASE_AUTH_DOMAIN}"
-          CONFIG="${CONFIG//\{\{FIREBASE_DATABASE_URL\}\}/$FIREBASE_DATABASE_URL}"
-          CONFIG="${CONFIG//\{\{FIREBASE_PROJECT_ID\}\}/$FIREBASE_PROJECT_ID}"
-          CONFIG="${CONFIG//\{\{FIREBASE_STORAGE_BUCKET\}\}/$FIREBASE_STORAGE_BUCKET}"
-          CONFIG="${CONFIG//\{\{FIREBASE_MESSAGING_SENDER_ID\}\}/$FIREBASE_MESSAGING_SENDER_ID}"
-          CONFIG="${CONFIG//\{\{FIREBASE_APP_ID\}\}/$FIREBASE_APP_ID}"
-          CONFIG="${CONFIG//\{\{FIREBASE_MEASUREMENT_ID\}\}/$FIREBASE_MEASUREMENT_ID}"
+          console.log('🚀 Загрузка Firebase конфигурации...');
           
-          echo "$CONFIG" > firebase-config.js
+          const firebaseConfig = {
+            apiKey: "$FIREBASE_API_KEY",
+            authDomain: "$FIREBASE_AUTH_DOMAIN",
+            databaseURL: "$FIREBASE_DATABASE_URL",
+            projectId: "$FIREBASE_PROJECT_ID",
+            storageBucket: "$FIREBASE_STORAGE_BUCKET",
+            messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
+            appId: "$FIREBASE_APP_ID",
+            measurementId: "$FIREBASE_MEASUREMENT_ID"
+          };
           
-          # Проверяем
-          echo "🔍 Проверка конфига:"
-          echo "Размер файла: $(wc -l < firebase-config.js) строк"
+          console.group('📊 Firebase Configuration:');
+          console.log('✅ Проект:', firebaseConfig.projectId);
+          console.log('✅ Database:', firebaseConfig.databaseURL);
+          console.log('✅ Auth Domain:', firebaseConfig.authDomain);
+          console.groupEnd();
           
+          // Проверка конфигурации
+          if (typeof window !== 'undefined') {
+            window.firebaseConfig = firebaseConfig;
+            console.log('✅ Конфигурация сохранена в window.firebaseConfig');
+          }
+          
+          console.log('✅ FIREBASE CONFIG READY\n');
+          EOF
+          
+          # Проверяем что файл создан
+          if [ ! -f "firebase-config.js" ]; then
+            echo "❌ Ошибка: firebase-config.js не создан!"
+            exit 1
+          fi
+          
+          echo "✅ Конфиг создан, проверяем содержимое..."
           if grep -q "{{" firebase-config.js; then
             echo "❌ В файле остались плейсхолдеры!"
             exit 1
           fi
           
-          echo "✅ Конфиг восстановлен и проверен"
+          if grep -q "FIREBASE_" firebase-config.js; then
+            echo "❌ В файле остались переменные FIREBASE_!"
+            exit 1
+          fi
+          
+          echo "✅ Конфиг проверен"
           
       - name: 📄 Создание .nojekyll
         run: |
@@ -217,7 +240,7 @@ jobs:
           ls -la
           echo ""
           echo "📁 Структура директорий:"
-          find . -type f -name "*.html" -o -name "*.js" -o -name "*.css" | head -20
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.css" \) | head -20
           
       - name: 🏗️ Настройка GitHub Pages
         uses: actions/configure-pages@v4
