--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ on:
         required: false
         default: 'false'
 
-# Даём разрешения для GitHub Pages
 permissions:
   contents: write
   pages: write
@@ -18,6 +17,7 @@ permissions:
 
 env:
   NODE_VERSION: '18'
+  NODE_OPTIONS: '--max-old-space-size=4096'
 
 jobs:
   validate-secrets:
@@ -76,12 +76,7 @@ jobs:
       - name: 📥 Загрузка репозитория
         uses: actions/checkout@v4
         
-      - name: 🔧 Установка Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          
-      - name: 📦 Генерация конфига
+      - name: 🔧 Генерация firebase-config.js
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
@@ -92,61 +87,30 @@ jobs:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
-          echo "🚀 Генерация firebase-config.js..."
+          echo "🚀 Генерация firebase-config.js из шаблона..."
           
-          # Проверяем существование скрипта
-          if [ -f "scripts/generate-config.js" ]; then
-            echo "📝 Используем существующий скрипт..."
-            node scripts/generate-config.js
-          else
-            echo "📝 Создаем конфиг напрямую..."
-            cat > firebase-config.js << 'EOF'
-            // ====================================================
-            // 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS
-            // ⚠️ Этот файл создается автоматически GitHub Actions
-            // ====================================================
-            
-            console.log('🚀 Загрузка Firebase конфигурации...');
-            
-            const firebaseConfig = {
-              apiKey: "$FIREBASE_API_KEY",
-              authDomain: "$FIREBASE_AUTH_DOMAIN",
-              databaseURL: "$FIREBASE_DATABASE_URL",
-              projectId: "$FIREBASE_PROJECT_ID",
-              storageBucket: "$FIREBASE_STORAGE_BUCKET",
-              messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
-              appId: "$FIREBASE_APP_ID",
-              measurementId: "$FIREBASE_MEASUREMENT_ID"
-            };
-            
-            console.group('📊 Firebase Configuration:');
-            console.log('✅ Проект:', firebaseConfig.projectId);
-            console.log('✅ Database:', firebaseConfig.databaseURL);
-            console.log('✅ Auth Domain:', firebaseConfig.authDomain);
-            console.groupEnd();
-            
-            // Проверка конфигурации
-            if (typeof window !== 'undefined') {
-              window.firebaseConfig = firebaseConfig;
-              console.log('✅ Конфигурация сохранена в window.firebaseConfig');
-            }
-            
-            console.log('✅ FIREBASE CONFIG READY\n');
-            EOF
-          fi
+          # Читаем шаблон
+          TEMPLATE=$(cat firebase-config.js.template)
           
-          echo "🔍 Проверяем результат..."
-          if [ -f "firebase-config.js" ]; then
-            echo "✅ Файл создан успешно"
-            echo "📄 Содержимое (первые 10 строк):"
-            head -10 firebase-config.js
-          else
-            echo "❌ Файл не создан!"
-            exit 1
-          fi
+          # Заменяем все переменные
+          CONFIG="$TEMPLATE"
+          CONFIG="${CONFIG//\{\{FIREBASE_API_KEY\}\}/$FIREBASE_API_KEY}"
+          CONFIG="${CONFIG//\{\{FIREBASE_AUTH_DOMAIN\}\}/$FIREBASE_AUTH_DOMAIN}"
+          CONFIG="${CONFIG//\{\{FIREBASE_DATABASE_URL\}\}/$FIREBASE_DATABASE_URL}"
+          CONFIG="${CONFIG//\{\{FIREBASE_PROJECT_ID\}\}/$FIREBASE_PROJECT_ID}"
+          CONFIG="${CONFIG//\{\{FIREBASE_STORAGE_BUCKET\}\}/$FIREBASE_STORAGE_BUCKET}"
+          CONFIG="${CONFIG//\{\{FIREBASE_MESSAGING_SENDER_ID\}\}/$FIREBASE_MESSAGING_SENDER_ID}"
+          CONFIG="${CONFIG//\{\{FIREBASE_APP_ID\}\}/$FIREBASE_APP_ID}"
+          CONFIG="${CONFIG//\{\{FIREBASE_MEASUREMENT_ID\}\}/$FIREBASE_MEASUREMENT_ID}"
+          
+          # Сохраняем
+          echo "$CONFIG" > firebase-config.js
+          
+          echo "✅ Конфиг создан"
+          head -15 firebase-config.js
 
-  build-and-deploy:
-    name: 🏗️ Сборка и деплой
+  deploy:
+    name: 🚀 Деплой на GitHub Pages
     runs-on: ubuntu-latest
     needs: generate-config
     environment:
@@ -156,13 +120,10 @@ jobs:
     steps:
       - name: 📥 Загрузка репозитория
         uses: actions/checkout@v4
-        
-      - name: 🔧 Установка Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: 🔄 Восстановление конфига (дублируем для надежности)
+      - name: 🔧 Восстановление сгенерированного конфига
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
@@ -173,83 +134,67 @@ jobs:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
-          echo "🔄 Создаем firebase-config.js..."
+          echo "🔄 Восстановление firebase-config.js..."
           
-          # Создаем конфиг напрямую
-          cat > firebase-config.js << 'EOF'
-          // ====================================================
-          // 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS
-          // ⚠️ Этот файл создается автоматически GitHub Actions
-          // ====================================================
+          # Генерируем конфиг заново (как в предыдущем шаге)
+          TEMPLATE=$(cat firebase-config.js.template)
           
-          console.log('🚀 Загрузка Firebase конфигурации...');
+          CONFIG="${TEMPLATE//\{\{FIREBASE_API_KEY\}\}/$FIREBASE_API_KEY}"
+          CONFIG="${CONFIG//\{\{FIREBASE_AUTH_DOMAIN\}\}/$FIREBASE_AUTH_DOMAIN}"
+          CONFIG="${CONFIG//\{\{FIREBASE_DATABASE_URL\}\}/$FIREBASE_DATABASE_URL}"
+          CONFIG="${CONFIG//\{\{FIREBASE_PROJECT_ID\}\}/$FIREBASE_PROJECT_ID}"
+          CONFIG="${CONFIG//\{\{FIREBASE_STORAGE_BUCKET\}\}/$FIREBASE_STORAGE_BUCKET}"
+          CONFIG="${CONFIG//\{\{FIREBASE_MESSAGING_SENDER_ID\}\}/$FIREBASE_MESSAGING_SENDER_ID}"
+          CONFIG="${CONFIG//\{\{FIREBASE_APP_ID\}\}/$FIREBASE_APP_ID}"
+          CONFIG="${CONFIG//\{\{FIREBASE_MEASUREMENT_ID\}\}/$FIREBASE_MEASUREMENT_ID}"
           
-          const firebaseConfig = {
-            apiKey: "$FIREBASE_API_KEY",
-            authDomain: "$FIREBASE_AUTH_DOMAIN",
-            databaseURL: "$FIREBASE_DATABASE_URL",
-            projectId: "$FIREBASE_PROJECT_ID",
-            storageBucket: "$FIREBASE_STORAGE_BUCKET",
-            messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
-            appId: "$FIREBASE_APP_ID",
-            measurementId: "$FIREBASE_MEASUREMENT_ID"
-          };
+          echo "$CONFIG" > firebase-config.js
           
-          console.group('📊 Firebase Configuration:');
-          console.log('✅ Проект:', firebaseConfig.projectId);
-          console.log('✅ Database:', firebaseConfig.databaseURL);
-          console.log('✅ Auth Domain:', firebaseConfig.authDomain);
-          console.groupEnd();
-          
-          // Проверка конфигурации
-          if (typeof window !== 'undefined') {
-            window.firebaseConfig = firebaseConfig;
-            console.log('✅ Конфигурация сохранена в window.firebaseConfig');
-          }
-          
-          console.log('✅ FIREBASE CONFIG READY\n');
-          EOF
-          
-          # Проверяем что файл создан
+          # Проверяем
           if [ ! -f "firebase-config.js" ]; then
-            echo "❌ Ошибка: firebase-config.js не создан!"
+            echo "::error::Не удалось создать firebase-config.js"
             exit 1
           fi
           
-          echo "✅ Конфиг создан, проверяем содержимое..."
-          if grep -q "{{" firebase-config.js; then
-            echo "❌ В файле остались плейсхолдеры!"
-            exit 1
-          fi
-          
-          if grep -q "FIREBASE_" firebase-config.js; then
-            echo "❌ В файле остались переменные FIREBASE_!"
-            exit 1
-          fi
-          
-          echo "✅ Конфиг проверен"
+          echo "✅ Конфиг восстановлен"
           
       - name: 📄 Создание .nojekyll
         run: |
           echo "📄 Создаю .nojekyll для GitHub Pages..."
           touch .nojekyll
           
-      - name: 📁 Проверка файлов
-        run: |
-          echo "📁 Структура файлов:"
-          ls -la
-          echo ""
-          echo "📁 Структура директорий:"
-          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.css" \) | head -20
-          
       - name: 🏗️ Настройка GitHub Pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v5
         
       - name: 📦 Создание артефакта
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: .
           
       - name: 🚀 Деплой на GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
+        
+      - name: ✅ Проверка деплоя
+        run: |
+          echo "🎉 ДЕПЛОЙ ЗАВЕРШЕН УСПЕШНО!"
+          echo ""
+          echo "🌐 Сайт доступен по адресу:"
+          echo "   https://askhat707.github.io/trading-data/"
+          echo ""
+          echo "🔍 Проверка файлов:"
+          echo "   • firebase-config.js: $([ -f "firebase-config.js" ] && echo "✅" || echo "❌")"
+          echo "   • .nojekyll: $([ -f ".nojekyll" ] && echo "✅" || echo "❌")"
+          echo "   • index.html: $([ -f "index.html" ] && echo "✅" || echo "❌")"
+          echo ""
+          echo "📊 Проверка конфига:"
+          if [ -f "firebase-config.js" ]; then
+            echo "   Размер: $(wc -c < firebase-config.js) байт"
+            echo "   Строк: $(wc -l < firebase-config.js)"
+            echo "   Содержит ключи: $([ $(grep -c "apiKey:" firebase-config.js) -gt 0 ] && echo "✅" || echo "❌")"
+          fi
+          echo ""
+          echo "🚀 Следующие шаги:"
+          echo "   1. Откройте сайт в браузере"
+          echo "   2. Нажмите F12 для проверки консоли"
+          echo "   3. Убедитесь что firebase-config.js загружен"
