--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy Trading Data Terminal
 on:
   push:
     branches: [ main, master ]
-  workflow_dispatch:  # Позволяет запускать вручную
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -17,6 +17,10 @@ concurrency:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    # ВАЖНО: Добавляем environment для деплоя на GitHub Pages
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
       - name: 📥 Загрузка репозитория
@@ -27,7 +31,7 @@ jobs:
         with:
           node-version: '18'
 
-      - name: 🔧 Создание firebase-config.js из секретов
+      - name: 🔧 Генерация firebase-config.js из секретов
         id: generate-config
         env:
           # ВАЖНО: Все 8 секретов ДОЛЖНЫ быть здесь
@@ -42,46 +46,33 @@ jobs:
         run: |
           echo "🚀 Генерация firebase-config.js..."
           
-          # Показать, что секреты доступны (скрывая значения)
+          # Проверка секретов
           echo "Проверка секретов:"
           echo "- FIREBASE_API_KEY: ${FIREBASE_API_KEY:0:10}..."
           echo "- FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID"
           
-          # Запускаем ваш скрипт
+          # Запускаем скрипт
           node scripts/generate-config.js
           
-          # Проверяем, что файл создан
+          # Проверяем файл
           if [ ! -f "firebase-config.js" ]; then
-            echo "❌ КРИТИЧЕСКАЯ ОШИБКА: firebase-config.js не создан!"
-            echo "Содержимое scripts/:"
-            ls -la scripts/
+            echo "❌ firebase-config.js не создан!"
             exit 1
           fi
           
           echo "✅ Файл создан. Размер: $(wc -c < firebase-config.js) байт"
-          
-          # Быстрая проверка содержимого (без показа секретов)
-          echo "🔍 Проверка файла:"
-          if grep -q "{{" firebase-config.js; then
-            echo "❌ В файле остались плейсхолдеры {{}}!"
-            exit 1
-          else
-            echo "✅ Плейсхолдеры заменены"
-          fi
 
       - name: 📄 Создание .nojekyll
         run: touch .nojekyll
 
-      - name: 📋 Проверка файлов перед деплоем
+      - name: 📋 Проверка файлов
         run: |
-          echo "📁 Список файлов в корне:"
+          echo "📁 Список файлов:"
           ls -la | grep -E "(firebase|index|\.nojekyll)"
           echo ""
           echo "🔍 Проверяем firebase-config.js:"
           if [ -f "firebase-config.js" ]; then
             echo "✅ Файл существует"
-            # Показываем только первую строку
-            echo "Первая строка: $(head -1 firebase-config.js)"
           else
             echo "❌ Файл отсутствует!"
             exit 1
@@ -91,7 +82,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: .
-          retention-days: 1
 
       - name: 🚀 Деплой на GitHub Pages
         id: deployment
