--- a/firebase-config.js.template
+++ b/firebase-config.js.template
@@ -4,6 +4,7 @@
 // ====================================================
 
 console.log('🚀 Загрузка Firebase конфигурации...');
+console.log('📍 Базовый путь:', window.location.pathname);
 
 const firebaseConfig = {
   apiKey: "{{FIREBASE_API_KEY}}",
@@ -22,6 +23,7 @@ console.log('✅ Database:', firebaseConfig.databaseURL);
 console.log('✅ Auth Domain:', firebaseConfig.authDomain);
 console.groupEnd();
 
+// Глобальная переменная для доступа из других скриптов
 if (typeof window !== 'undefined') {
   window.firebaseConfig = firebaseConfig;
   console.log('✅ Конфигурация сохранена в window.firebaseConfig');
