--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-# Firebase configs
+# Firebase конфиги (генерируются автоматически)
 firebase-config.js
+firebase-config.js.template
 
-# Build directories
-build/
-_site/
-dist/
+# Локальные настройки
+.env
+.env.local
+.env.production
 
-# Node
-node_modules/
-package-lock.json
+# Логи
+*.log
 npm-debug.log*
+
+# Системные файлы
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-logs/
+# Временные файлы
+tmp/
+temp/
